# GeoData-Per-

./: .gitignore  arquitectura_geodata_peru.md
SATagro/: .env  README.md  package-lock.json  package.json  server.py  walkthrough SatAgro
SATagro/brain/: pinn_model.py  prescriptions.json
SATagro/dashboard/: dashboard.js  index.html  pitch.html  styles.css
SATagro/data/: recolector_geoperu.py  sensor_simulator.py  simulated_data.json  workflow_n8n.json
SATagro/database/: schema.sql
nexus_router/: go.mod  graph_solver.go  main.go
regenTERRA/: .env  Arquitectura_Actual_GeoTERRA.md  Arquitectura_Completa_GeoTERRA.md  Arquitectura_Escalabilidad_GeoTERRA.md  Catalogo_Completo_Datasets_GeoPeru.md  Ciclo_De_Vida_Datasets_GeoPeru.md  Expediente_Maestro_Innovacion.md  Flujo_Datos_GeoTERRA.md  Guia_Datasets_GeoPeru.md  Manual_Usuario_GeoTERRA.md  Plan_Ingesta_Datos_GeoPeru.md  Plan_Maestro.md  Problematicas_Investigacion_GeoTERRA.md  Propuesta_Oficial_GeoTon_2026.md  Soluciones_Existentes_Competidores_GeoTERRA.md  implementation_plan RegenTerra  package-lock.json  package.json
regenTERRA/docs/: Estrategia_Pivote_GeoTERRA.md
regenTERRA/public/brain/: prescriptions.json
regenTERRA/public/satagro/: dashboard.js  index.html  pitch.css
regenTERRA/src/: App.tsx  index.css
regenTERRA/src/components/: Layout.tsx
regenTERRA/src/context/: DimensionContext.tsx
regenTERRA/src/hooks/: useRiskAlerts.ts
regenTERRA/src/i18n/: LanguageContext.tsx  translations.ts
regenTERRA/src/pages/: Dashboard.tsx  Map3D.tsx  (+5 more)
wasm_core/: Cargo.toml  README.md
wasm_core/src/: lib.rs
(+14 files in other folders)
